--- a/AcuLink_Bridge_Reader_CSharp/AcuLink_Bridge_Reader_CSharp.csproj
+++ b/AcuLink_Bridge_Reader_CSharp/AcuLink_Bridge_Reader_CSharp.csproj
@@ -28,7 +28,7 @@
     <UpdateRequired>false</UpdateRequired>
     <MapFileExtensions>true</MapFileExtensions>
     <ApplicationRevision>2</ApplicationRevision>
-    <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
+    <ApplicationVersion>1.0.0.2</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <PublishWizardCompleted>true</PublishWizardCompleted>
     <BootstrapperEnabled>true</BootstrapperEnabled>
